Update 1 to add test text

--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<h1>About Penguins</h1>
+<!DOCTYPE html>
+<html lang="en-us">
+<link rel="stylesheet" href="style.css">
 
-<p>Penguins are one of the few types of aquatic flightless birds. Most of them live in the Southern Hemisphere, with only one species of penguin travelling north of the equator. Most penguins' diets consists of krill, fish, squid, and other forms of aquatic life found in the ocean. Throughout its life, penguins spend roughly half of their lifetime on land and the other half in the ocean.</p>
+<header>
 
+</header>
+
+<body>
+    <h1>About Penguins    
+    </h1>
+    
+    <p>Penguins are one of the few types of aquatic flightless birds. Most of them live in the Southern Hemisphere, with only one species of penguin travelling north of the equator. Most penguins' diets consists of krill, fish, squid, and other forms of aquatic life found in the ocean. Throughout its life, penguins spend roughly half of their lifetime on land and the other half in the ocean.        
+    </p>
+
+    <p></p>
+
+</body>
+
+</html>
