Update 2 style and index

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <h1>About Penguins    
     </h1>
     
+    <img id="Baby-Penguins" src="https://c.files.bbci.co.uk/CF3C/production/_111925035_penguino.jpg" alt="Baby Penguins">
+
     <p>Penguins are one of the few types of aquatic flightless birds. Most of them live in the Southern Hemisphere, with only one species of penguin travelling north of the equator. Most penguins' diets consists of krill, fish, squid, and other forms of aquatic life found in the ocean. Throughout its life, penguins spend roughly half of their lifetime on land and the other half in the ocean.        
     </p>
 
-    <p></p>
+    <p>There are many species of penguins, ranging from the large Emperor Pengiuns to the smallest, aptly named, Little Penguin species.</p>
 
 </body>
 
