Update 3 index and style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Penguins are one of the few types of aquatic flightless birds. Most of them live in the Southern Hemisphere, with only one species of penguin travelling north of the equator. Most penguins' diets consists of krill, fish, squid, and other forms of aquatic life found in the ocean. Throughout its life, penguins spend roughly half of their lifetime on land and the other half in the ocean.        
     </p>
 
-    <p>There are many species of penguins, ranging from the large Emperor Pengiuns to the smallest, aptly named, Little Penguin species.</p>
+    <p>There are many species of penguins, ranging from the large Emperor Pengiuns to the smallest, aptly named, Little Penguin species. The Emperor Penguin can grow up to 110-120 cm tall, which dwarfs the Little Penguin, which only averages at about 33 cm in height.</p>
 
 </body>
 
